[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/UI/UI.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="h_box_container" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 25.0
rect_min_size = Vector2( 384, 32 )
size_flags_horizontal = 3
theme = ExtResource( 2 )

[node name="player_health_label" type="Label" parent="h_box_container"]
margin_top = 9.0
margin_right = 190.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "HEALTH: 5"
align = 1

[node name="player_state_label" type="Label" parent="h_box_container"]
margin_left = 194.0
margin_top = 9.0
margin_right = 384.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "STATE: IDLE"
align = 1

